# 2semestr_practica

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  DCTCompressor.cpp  DCTCompressor.h  FractalCompressorAdapter.cpp  FractalCompressorAdapter.h  HuffmanCompressor.cpp  HuffmanCompressor.h  ICompressor.h  ImageCompressorApp.cpp  ImageCompressorApp.h  ImageUtils.cpp  ImageUtils.h  LZWCompressor.cpp  LZWCompressor.h  RLE.cpp  RLECompressor.cpp  RLECompressor.h  Readme.md  ResultWindow.cpp  ResultWindow.h  SaveBMP.cpp  SaveBMP.h  build.ninja  cmake_install.cmake  dct.cpp  dct.h  fractal_compressor.cpp  fractal_compressor.h  huffman.cpp  huffman.h  leto_compressed.rle  lzw.cpp  lzw.h  main.cpp  main_dct.cpp  main_fractal.cpp  main_haff.cpp  (+5 more)
cmakes/: CMakeLists_qt.txt
